add features item

--- a/index.html
+++ b/index.html
@@ -3,37 +3,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A website for tourism and nature tourism">
+    <meta
+      name="description"
+      content="A website for tourism and nature tourism"
+    />
     <title>Camping Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-      <div class="landing-page">
-          <header>
-              <nav>
-                  <ul>
-                      <li> <a href="#">Home</a></li>
-                      <li> <a href="#">Destination</a></li>
-                      <li> <a href="#">Near me</a></li>
-                      <li> <a href="#">Events</a></li>
-                      <li> <a href="#">Blog</a></li>
-                      <li> <a href="#">Gallery</a></li>
-                      <li> <a href="#">About</a></li>
-                      <li> <a href="#">Contact us</a></li>
-                  </ul>
-              </nav>
-              <div class="header-link-group">
-                  <a href="#">Sign up</a>
-                  <a href="#">Sign in</a>
-              </div>
-          </header>
-          <div class="main-title">
-              <h1>Find Yourself Outside.</h1>
-              <p>Book unique camping experiences on over 300,000 campsites, cabins, RV parks, public parks and more.</p>
-              <button class="landing-page-btn">Discover</button>
-          </div>
+    <div class="landing-page">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Destination</a></li>
+            <li><a href="#">Near me</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </nav>
+        <div class="header-link-group">
+          <a href="#">Sign up</a>
+          <a href="#">Sign in</a>
+        </div>
+      </header>
+      <div class="main-title">
+        <h1>Find Yourself Outside.</h1>
+        <p>
+          Book unique camping experiences on over 300,000 campsites, cabins, RV
+          parks, public parks and more.
+        </p>
+        <button class="landing-page-btn">Discover</button>
       </div>
-
+    </div>
+    <div class="feature-items-container">
+      <div class="feature-item">
+        <img src="image/fire-icon.svg" alt="Camping icon" />
+        <h4>Camping & Day Use</h4>
+        <p>
+          Return to your favorite spot or discover a new one that’s right for
+          you.
+        </p>
+      </div>
+      <div class="feature-item">
+        <img src="image/ticket-icon.svg" alt="Ticket icon" />
+        <h4>Tours & Tickets</h4>
+        <p>Reserve tours and tickets to participate in events.</p>
+      </div>
+      <div class="feature-item">
+        <img src="image/permits-icon.svg" alt="Permits icon" />
+        <h4>Permits</h4>
+        <p>Obtain permits for access to high-demand locations.</p>
+      </div>
+      <div class="feature-item">
+        <img src="image/fishing-icon.svg" alt="Fishing icon" />
+        <h4>Recreation Activities</h4>
+        <p>Find the best spots for hunting, fishing & recreational shooting.</p>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
