add destination item styles

--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
         <p>Find the best spots for hunting, fishing & recreational shooting.</p>
       </div>
     </div>
+    <div class="destinations-title">
+      <img src="image/map-icon.svg" alt="destinations-icon" />
+      <h2>Explore Destinations & Activities</h2>
+    </div>
+    <div class="destinations-container">
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/testi-photo.jpg" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+    </div>
 
     <script src="script.js"></script>
   </body>
