complete destination section styles , fix img sizes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="destinations-container">
         <section class="destination">
             <div class="image-container">
-                <img src="image/testi-photo.jpg" alt="destination">
+                <img src="image/destination-1.png" alt="destination">
                 <span>
                     <img src="image/heart-outline-icon.svg" alt="like-icon">
                 </span>
@@ -81,7 +81,140 @@
             <p>Book unique camping experiences on over 300,000 campsites.</p>
             <button class="readMore-btn">Read More</button>
         </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-2.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Red Lifeguard Stand</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-1.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-3.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Red Lifeguard Stand</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-4.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-2.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Red Lifeguard Stand</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-5.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-3.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>The Tree House</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-4.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-6.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Kindred Spirits Cabin</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-3.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Trickle Creek Ranch</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
+        <section class="destination">
+            <div class="image-container">
+                <img src="image/destination-7.png" alt="destination">
+                <span>
+                    <img src="image/heart-outline-icon.svg" alt="like-icon">
+                </span>
+            </div>
+            <span class="destination-price">$36/night</span>
+            <h3>Dragonfly Tiny Cabin</h3>
+            <p>Book unique camping experiences on over 300,000 campsites.</p>
+            <button class="readMore-btn">Read More</button>
+        </section>
     </div>
+    <button class="viewAll-btn">View All</button>
 
     <script src="script.js"></script>
   </body>
