add contactUs style

--- a/index.html
+++ b/index.html
@@ -215,6 +215,23 @@
         </section>
     </div>
     <button class="viewAll-btn">View All</button>
+    <div class="contactUs">
+        <div class="contactUs-form">
+            <h2>
+                Let's Stay in Touch
+            </h2>
+            <p>
+                Get travel planning ideas, helpful tips, and stories from our visitors delivered right to your inbox.
+            </p>
+            <form action="#">
+                <input type="email" name="email" id="" placeholder="Email Address">
+                <button type="submit">
+                    <img src="image/send-message-icon.svg" alt="send">
+                </button>
+            </form>
+        </div>
+        <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image">
+    </div>
 
     <script src="script.js"></script>
   </body>
