complete contactUs and responsive before navigation

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                 <button type="submit">
                     <img src="image/send-message-icon.svg" alt="send">
                 </button>
+                <img src="image/message-icon.svg" alt="message-icon" class="message-icon">
             </form>
         </div>
         <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image">
