not complete humburger

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="landing-page">
+    <div class="landing-page" data-clickable="false">
       <header>
         <nav>
           <ul>
@@ -29,6 +29,11 @@
           <a href="#">Sign up</a>
           <a href="#">Sign in</a>
         </div>
+        <button class="hamburger-btn">
+            <div class="hamburger-line top"></div>
+            <div class="hamburger-line middle"></div>
+            <div class="hamburger-line bottom"></div>
+          </button>
       </header>
       <div class="main-title">
         <h1>Find Yourself Outside.</h1>
