add navigation collapse logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="landing-page" data-clickable="false">
+    <div class="landing-page">
+        <div class="landing-page__overlay"></div>
       <header>
         <nav>
           <ul>
