add jQuery and convert Scripts to it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="landing-page">
-        <div class="landing-page__overlay"></div>
+      <div class="landing-page__overlay"></div>
       <header>
         <nav>
           <ul>
@@ -31,10 +31,10 @@
           <a href="#">Sign in</a>
         </div>
         <button class="hamburger-btn">
-            <div class="hamburger-line top"></div>
-            <div class="hamburger-line middle"></div>
-            <div class="hamburger-line bottom"></div>
-          </button>
+          <div class="hamburger-line top"></div>
+          <div class="hamburger-line middle"></div>
+          <div class="hamburger-line bottom"></div>
+        </button>
       </header>
       <div class="main-title">
         <h1>Find Yourself Outside.</h1>
@@ -75,171 +75,178 @@
       <h2>Explore Destinations & Activities</h2>
     </div>
     <div class="destinations-container">
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-1.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-2.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Red Lifeguard Stand</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-1.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-3.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Red Lifeguard Stand</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-4.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-2.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Red Lifeguard Stand</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-5.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-3.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>The Tree House</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-4.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-6.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Kindred Spirits Cabin</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-3.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Trickle Creek Ranch</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
-        <section class="destination">
-            <div class="image-container">
-                <img src="image/destination-7.png" alt="destination">
-                <span>
-                    <img src="image/heart-outline-icon.svg" alt="like-icon">
-                </span>
-            </div>
-            <span class="destination-price">$36/night</span>
-            <h3>Dragonfly Tiny Cabin</h3>
-            <p>Book unique camping experiences on over 300,000 campsites.</p>
-            <button class="readMore-btn">Read More</button>
-        </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-1.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-2.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Red Lifeguard Stand</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-1.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-3.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Red Lifeguard Stand</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-4.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-2.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Red Lifeguard Stand</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-5.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-3.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>The Tree House</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-4.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-6.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Kindred Spirits Cabin</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-3.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Trickle Creek Ranch</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
+      <section class="destination">
+        <div class="image-container">
+          <img src="image/destination-7.png" alt="destination" />
+          <span>
+            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+          </span>
+        </div>
+        <span class="destination-price">$36/night</span>
+        <h3>Dragonfly Tiny Cabin</h3>
+        <p>Book unique camping experiences on over 300,000 campsites.</p>
+        <button class="readMore-btn">Read More</button>
+      </section>
     </div>
     <button class="viewAll-btn">View All</button>
     <div class="contactUs">
-        <div class="contactUs-form">
-            <h2>
-                Let's Stay in Touch
-            </h2>
-            <p>
-                Get travel planning ideas, helpful tips, and stories from our visitors delivered right to your inbox.
-            </p>
-            <form action="#">
-                <input type="email" name="email" id="" placeholder="Email Address">
-                <button type="submit">
-                    <img src="image/send-message-icon.svg" alt="send">
-                </button>
-                <img src="image/message-icon.svg" alt="message-icon" class="message-icon">
-            </form>
-        </div>
-        <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image">
+      <div class="contactUs-form">
+        <h2>Let's Stay in Touch</h2>
+        <p>
+          Get travel planning ideas, helpful tips, and stories from our visitors
+          delivered right to your inbox.
+        </p>
+        <form action="#">
+          <input type="email" name="email" id="" placeholder="Email Address" />
+          <button type="submit">
+            <img src="image/send-message-icon.svg" alt="send" />
+          </button>
+          <img
+            src="image/message-icon.svg"
+            alt="message-icon"
+            class="message-icon"
+          />
+        </form>
+      </div>
+      <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image" />
     </div>
-
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
