--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <title>Camping Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <div class="landing-page">
@@ -242,6 +243,84 @@
       </div>
       <img src="image/camp-icon.svg" alt="Camp icon" class="contactUs-image" />
     </div>
+    <footer>
+      <div class="footer-items-container">
+        <div class="footer-item">
+          <h5>Hipcamp is everywhere you want to camp.</h5>
+          <p>
+            Discover unique experiences on ranches, nature preserves, farms,
+            vineyards, and public campgrounds across the U.S. Book tent camping,
+            treehouses, cabins, yurts, primitive backcountry sites, car camping,
+            airstreams, tiny houses, RV camping, glamping tents and more.
+          </p>
+        </div>
+        <div class="footer-item">
+          <h5>Get to Know Us</h5>
+          <ul>
+            <li>
+              <a href="#"> About Us </a>
+            </li>
+            <li>
+              <a href="#"> Rules & Reservation Policies </a>
+            </li>
+            <li>
+              <a href="#"> Accessibility </a>
+            </li>
+            <li>
+              <a href="#"> Media Center </a>
+            </li>
+            <li>
+              <a href="#"> Site Map </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-item">
+          <h5>Plan with Us</h5>
+          <ul>
+            <li>
+              <a href="#"> Find Trip Inspiration </a>
+            </li>
+            <li>
+              <a href="#">Build a Trip </a>
+            </li>
+            <li>
+              <a href="#">Buy a Pass</a>
+            </li>
+            <li>
+              <a href="#"> Enter a Lottery </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-item">
+          <h5>Let Us Help You</h5>
+          <ul>
+            <li>
+              <a href="#"> Your Account </a>
+            </li>
+            <li>
+              <a href="#"> Your Reservations </a>
+            </li>
+            <li>
+              <a href="#"> Contact Us </a>
+            </li>
+            <li>
+              <a href="#"> Help Center </a>
+            </li>
+            <li>
+              <a href="#"> Submit Feedback </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-item">
+            <h5>Download Our App</h5>
+            <div class="download-images-container">
+                <img src="image/appstore-img.png" alt="download from App Store">
+                <img src="image/googleplay-img.png" alt="download from Google Play">
+            </div>
+        </div>
+      </div>
+      <div class="copyright">&copy;2021. All rights reserved.</div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
