add check_empty_input func for email btn

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="image-container">
           <img src="image/destination-1.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -92,7 +92,7 @@
         <div class="image-container">
           <img src="image/destination-2.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -104,7 +104,7 @@
         <div class="image-container">
           <img src="image/destination-1.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -116,7 +116,7 @@
         <div class="image-container">
           <img src="image/destination-3.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -128,7 +128,7 @@
         <div class="image-container">
           <img src="image/destination-4.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -140,7 +140,7 @@
         <div class="image-container">
           <img src="image/destination-2.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -152,7 +152,7 @@
         <div class="image-container">
           <img src="image/destination-5.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -164,7 +164,7 @@
         <div class="image-container">
           <img src="image/destination-3.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -176,7 +176,7 @@
         <div class="image-container">
           <img src="image/destination-4.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -188,7 +188,7 @@
         <div class="image-container">
           <img src="image/destination-6.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -200,7 +200,7 @@
         <div class="image-container">
           <img src="image/destination-3.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -212,7 +212,7 @@
         <div class="image-container">
           <img src="image/destination-7.png" alt="destination" />
           <span>
-            <img src="image/heart-outline-icon.svg" alt="like-icon" />
+            <img src="image/heart-outline-icon.svg" alt="like-icon" class="like-icon" />
           </span>
         </div>
         <span class="destination-price">$36/night</span>
@@ -230,9 +230,9 @@
           delivered right to your inbox.
         </p>
         <form action="#">
-          <input type="email" name="email" id="" placeholder="Email Address" />
-          <button type="submit">
-            <img src="image/send-message-icon.svg" alt="send" />
+          <input type="email" name="email" id="sendEmail-input"  placeholder="Email Address"  />
+          <button type="submit" class="sendEmail-btn">
+            <img src="image/send-message-icon.svg" alt="send"/>
           </button>
           <img
             src="image/message-icon.svg"
